# JSONPath-Like-Value-Retrieval

./: .gitignore  Cargo.toml  README.md
src/: comparison.rs  context.rs  engine.rs  errors.rs  expression.rs  filter.rs  jsonpath.rs  lib.rs  main.rs  parser.rs
src/functions/: mod.rs
tests/: builtin_functions.rs  e2e.rs  invalid.rs  recursive_descent.rs
