[package]
name = "json-path-like-extraction"
version = "0.1.0"
edition = "2021"
authors = ["Xiaoping Wang"]

[lib]
name = "json_path_like_extraction"
path = "src/lib.rs"

[[bin]]
name = "jple"
path = "src/main.rs"

[dependencies]
serde_json = "1"
itertools = "0.13"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1.4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-error = "0.2"
